Fix Use class icons toggle overlap with replays list (#192)

--- a/core/src/css/component/replays/replays-list.component.scss
+++ b/core/src/css/component/replays/replays-list.component.scss
@@ -82,12 +82,6 @@
 	.icon-toggle {
 		margin-left: auto;
 		margin-right: 25px;
-
-		&.absolute {
-			position: absolute;
-			right: 0;
-			bottom: -20px;
-		}
 	}
 
 	// .icon-toggle {
